fix navbar align

--- a/src/App/Header/Header.module.css
+++ b/src/App/Header/Header.module.css
@@ -12,7 +12,7 @@
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
   line-height: 0.65;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px !important;
   font-size: 52px;
 }
 
